maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:16: error: method checkg has return statement; needs result type
  return r
  ^